--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
 <div class="m_bg">
 	<div class="w1185">
     	<form action="#" class="form">
-        	<p class="p01"><span>会员登录</span><a href="#">免费注册</a></p>
+        	<p class="p01"><span>会员登录</span><a href="/reg.html">免费注册</a></p>
         	<p class="p02"><input type="text" value="账户名" name="" class="txt" onfocus="if(value=='账户名') {value=''}" onblur="if(value=='') {value='账户名'}"/></p>
             <p class="p03"><input type="text" value="密码" name="" class="txt" onfocus="if(value=='密码') {value=''}" onblur="if(value=='') {value='密码'}"/></p>
             <p class="p04"><span class="sp01"><input type="checkbox" name=""/>自动登录</span><span class="sp02">忘记密码？点击<a href="#">找回密码</a></span></p>
