--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,8 @@
 
 <div class="top">
 	<div class="w1200">
-		<div class="left">您好，欢迎光临易易城！<a href="#">[登录]</a> <a href="#">[注册]</a></div>
-        <div class="right"><a href="#">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="#">购物车<b>0</b>件</a></div>
+		<div class="left">您好，欢迎光临易易城！<a href="./login.html">[登录]</a> <a href="./reg.html">[注册]</a></div>
+        <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
         <div class="clear"></div>
     </div>
 </div>
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </div>
-   	  <div class="item"><a href="#" class="home">商城首页</a></div>
+   	  <div class="item"><a href="./index.html" class="home">商城首页</a></div>
         <div class="item"><a href="#">易易特色</a></div>
         <div class="item"><a href="#">热销产品</a></div>
         <div class="item"><a href="#">新品上市</a></div>
@@ -511,7 +511,7 @@ $(document).ready(function(e) {
             <dl>
                 <dt>新手指南</dt>
                 <dd>
-                    <a href="#">注册新用户</a>
+                    <a href="./reg.html">注册新用户</a>
                     <a href="#">商品订购流程</a>
                     <a href="#">会员注册协议</a>
                 </dd>
@@ -519,9 +519,9 @@ $(document).ready(function(e) {
             <dl>
                 <dt>付款方式</dt>
                 <dd>
-                    <a href="#">支付宝支付</a>
-                    <a href="#">网上银行支付</a>
-                    <a href="#">货到付款</a>
+                    <a href="./payply.html">支付宝支付</a>
+                    <a href="./payply.html">网上银行支付</a>
+                    <a href="./payply.html">货到付款</a>
                 </dd>
             </dl>
             <dl>
