--- a/templates/product.html
+++ b/templates/product.html
@@ -13,8 +13,8 @@
 
 <div class="top">
 	<div class="w1200">
-		<div class="left">您好，欢迎光临易易城！<a href="#">[登录]</a> <a href="#">[注册]</a></div>
-        <div class="right"><a href="#">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="#">购物车<b>0</b>件</a></div>
+		<div class="left">您好，欢迎光临易易城！<a href="./login.html">[登录]</a> <a href="./reg.html">[注册]</a></div>
+        <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
         <div class="clear"></div>
     </div>
 </div>
@@ -41,7 +41,7 @@
 
 <div class="menu">
 	<div class="w1200">
-    	<div class="item" id="nav"><a href="#" class="nav">全部商品分类</a>
+    	<div class="item" id="nav"><a href="./product.html" class="nav">全部商品分类</a>
         	<div class="nav_son">
             	<ul>
                 	<li class="li01"><a href="#">功能产品</a></li>
@@ -68,7 +68,7 @@
 
 
 <div class="w1200">
-	<div class="position"><a href="#">首页</a> > <a href="#">家居家访</a></div>
+	<div class="position"><a href="./index.html">首页</a> > <a href="#">家居家访</a></div>
     
     <div class="c_nav">
         <div class="item"><span>家访：</span><p><a href="#">床品套件</a><a href="#">被子</a><a href="#">毛巾浴巾</a><a href="#">电热毯</a><a href="#">毯子</a><a href="#">枕头</a><a href="#">床垫/被褥</a><a href="#">抱枕靠垫</a><a href="#">窗帘面纱</a><a href="#">布艺软饰</a><a href="#">被单被罩</a></p><div class="clear"></div>
@@ -409,7 +409,7 @@
             <dl>
                 <dt>新手指南</dt>
                 <dd>
-                    <a href="#">注册新用户</a>
+                    <a href="./reg.html">注册新用户</a>
                     <a href="#">商品订购流程</a>
                     <a href="#">会员注册协议</a>
                 </dd>
@@ -417,9 +417,9 @@
             <dl>
                 <dt>付款方式</dt>
                 <dd>
-                    <a href="#">支付宝支付</a>
-                    <a href="#">网上银行支付</a>
-                    <a href="#">货到付款</a>
+                    <a href="./payply.html">支付宝支付</a>
+                    <a href="./payply.html">网上银行支付</a>
+                    <a href="./payply.html">货到付款</a>
                 </dd>
             </dl>
             <dl>
