--- a/templates/product_show.html
+++ b/templates/product_show.html
@@ -19,8 +19,8 @@ return true;
 
 <div class="top">
 	<div class="w1200">
-		<div class="left">您好，欢迎光临易易城！<a href="#">[登录]</a> <a href="#">[注册]</a></div>
-        <div class="right"><a href="#">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="#">购物车<b>0</b>件</a></div>
+		<div class="left">您好，欢迎光临易易城！<a href="./login.html">[登录]</a> <a href="./reg.html">[注册]</a></div>
+        <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
         <div class="clear"></div>
     </div>
 </div>
@@ -47,7 +47,7 @@ return true;
 
 <div class="menu">
 	<div class="w1200">
-    	<div class="item" id="nav"><a href="#" class="nav">全部商品分类</a>
+    	<div class="item" id="nav"><a href="./product.html" class="nav">全部商品分类</a>
         	<div class="nav_son">
             	<ul>
                 	<li class="li01"><a href="#">功能产品</a></li>
@@ -74,7 +74,7 @@ return true;
 
 
 <div class="w1200 product">
-	<div class="position"><a href="#">首页</a> > <a href="#">家居家访</a> > <a href="#">头层牛皮真皮沙发 客厅家具 FPSF0814 进口中厚皮 卡菲纳 沙发</a></div>
+	<div class="position"><a href="./index.html">首页</a> > <a href="#">家居家访</a> > <a href="#">头层牛皮真皮沙发 客厅家具 FPSF0814 进口中厚皮 卡菲纳 沙发</a></div>
     
     <link rel="stylesheet" href="css/detail.css" type="text/css" />
 	<script src="js/jquery-1.5.1.js" type="text/javascript"></script>
@@ -343,7 +343,7 @@ return true;
             <dl>
                 <dt>新手指南</dt>
                 <dd>
-                    <a href="#">注册新用户</a>
+                    <a href="./reg.html">注册新用户</a>
                     <a href="#">商品订购流程</a>
                     <a href="#">会员注册协议</a>
                 </dd>
@@ -351,9 +351,9 @@ return true;
             <dl>
                 <dt>付款方式</dt>
                 <dd>
-                    <a href="#">支付宝支付</a>
-                    <a href="#">网上银行支付</a>
-                    <a href="#">货到付款</a>
+                    <a href="./payply.html">支付宝支付</a>
+                    <a href="./payply.html">网上银行支付</a>
+                    <a href="./payply.html">货到付款</a>
                 </dd>
             </dl>
             <dl>
