--- a/templates/reg.html
+++ b/templates/reg.html
@@ -36,7 +36,7 @@
                 </ul>
             </form>
         </div>
-        <div class="right">我经注册，马上<a rel="#">登录</a></div>
+        <div class="right">我经注册，马上<a href="./login.html">登录</a></div>
         <div class="clear"></div>
     </div>
 </div>
