--- a/templates/shopcar.html
+++ b/templates/shopcar.html
@@ -13,8 +13,8 @@
 
 <div class="top">
 	<div class="w1200">
-		<div class="left">您好，欢迎光临易易城！<a href="#">[登录]</a> <a href="#">[注册]</a></div>
-        <div class="right"><a href="#">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="#">购物车<b>0</b>件</a></div>
+		<div class="left">您好，欢迎光临易易城！<a href="./login.html">[登录]</a> <a href="./reg.html">[注册]</a></div>
+        <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
         <div class="clear"></div>
     </div>
 </div>
@@ -41,7 +41,7 @@
 
 <div class="menu">
 	<div class="w1200">
-    	<div class="item" id="nav"><a href="#" class="nav">全部商品分类</a>
+    	<div class="item" id="nav"><a href="./product.html" class="nav">全部商品分类</a>
         	<div class="nav_son">
             	<ul>
                 	<li class="li01"><a href="#">功能产品</a></li>
@@ -68,7 +68,7 @@
 
 
 <div class="w1200">
-	<div class="position"><a href="#">首页</a> > <a href="#">购物车</a></div>
+	<div class="position"><a href="./index.html">首页</a> > <a href="./shopcar.html">购物车</a></div>
     
     <div class="shopcar">
     	<div class="shop_lc"><span class="sp01">我的购物车</span><span class="sp02">填写提交信息表单</span><span class="sp03">在线支付</span></div>
@@ -170,7 +170,7 @@
             <dl>
                 <dt>新手指南</dt>
                 <dd>
-                    <a href="#">注册新用户</a>
+                    <a href="./login.html">注册新用户</a>
                     <a href="#">商品订购流程</a>
                     <a href="#">会员注册协议</a>
                 </dd>
@@ -178,9 +178,9 @@
             <dl>
                 <dt>付款方式</dt>
                 <dd>
-                    <a href="#">支付宝支付</a>
-                    <a href="#">网上银行支付</a>
-                    <a href="#">货到付款</a>
+                    <a href="./payply.html">支付宝支付</a>
+                    <a href="./payply.html">网上银行支付</a>
+                    <a href="./payply.html">货到付款</a>
                 </dd>
             </dl>
             <dl>
