--- a/templates/reg.html
+++ b/templates/reg.html
@@ -25,11 +25,11 @@
 	<div class="w1185">
     	<div class="left">
         	<p><b>免费注册</b></p>
-            <form action="#" class="form">
+            <form action="./login.html" class="form" method="post">
                 <ul>
-                     <li><span><font>*</font> 用户名/手机号：</span><input type="text" name="" class="txt"/></li>
-                     <li><span><font>*</font> 请设置密码：</span><input type="text" name="" class="txt"/></li>
-                     <li><span><font>*</font> 请确认密码：</span><input type="text" name="" class="txt"/></li>
+                     <li><span><font>*</font> 用户名/手机号：</span><input type="text" name="username" class="txt"/></li>
+                     <li><span><font>*</font> 请设置密码：</span><input type="text" name="password" class="txt"/></li>
+                     <li><span><font>*</font> 请确认密码：</span><input type="text" name="confirm" class="txt"/></li>
                      <li class="li03"><span><font>*</font> 验证码：</span><input type="text" name="" class="txt txt2"/><img src="images/code.jpg"/><a href="#">看不清?换一张</a></li>
                      <li class="li01"><input type="checkbox" value="" name=""/>我已阅并同意<a rel="#">《易易城用户注册协议》</a></li>
                      <li class="li02"><input type="submit" value="立即注册" class="sub"/></li>
