--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
 
 <div class="m_bg">
 	<div class="w1185">
-    	<form action="#" class="form">
+    	<form action="./checks.html" class="form" method="post">
         	<p class="p01"><span>会员登录</span><a href="./reg.html">免费注册</a></p>
         	<p class="p02"><input type="text" value="账户名" name="" class="txt" onfocus="if(value=='账户名') {value=''}" onblur="if(value=='') {value='账户名'}"/></p>
             <p class="p03"><input type="text" value="密码" name="" class="txt" onfocus="if(value=='密码') {value=''}" onblur="if(value=='') {value='密码'}"/></p>
