--- a/templates/reg.html
+++ b/templates/reg.html
@@ -11,7 +11,7 @@
     	<div class="logo"><a href="#"></a></div>
         <div class="font-d">欢迎登陆</div>
         <div class="search">
-        	<form action="#" class="form">
+        	<form action="./reg_now.html" class="form">
         		<input type="text" value="输入商品关键字" name="keyword" class="txt" onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}"/>
                 <input type="submit" value="搜索" class="sub"/>
             </form>
@@ -25,12 +25,12 @@
 	<div class="w1185">
     	<div class="left">
         	<p><b>免费注册</b></p>
-            <form action="./login.html" class="form" method="post">
+            <form action="./reg_now.html" class="form" method="post">
                 <ul>
                      <li><span><font>*</font> 用户名/手机号：</span><input type="text" name="username" class="txt"/></li>
                      <li><span><font>*</font> 请设置密码：</span><input type="text" name="password" class="txt"/></li>
                      <li><span><font>*</font> 请确认密码：</span><input type="text" name="confirm" class="txt"/></li>
-                     <li class="li03"><span><font>*</font> 验证码：</span><input type="text" name="" class="txt txt2"/><img src="images/code.jpg"/><a href="#">看不清?换一张</a></li>
+                     <li class="li03"><span><font>*</font> 验证码：</span><input type="text" name="verification" class="txt txt2"/><img src="images/code.jpg"/><a href="#">看不清?换一张</a></li>
                      <li class="li01"><input type="checkbox" value="" name=""/>我已阅并同意<a rel="#">《易易城用户注册协议》</a></li>
                      <li class="li02"><input type="submit" value="立即注册" class="sub"/></li>
                 </ul>
