--- a/templates/pwd.html
+++ b/templates/pwd.html
@@ -116,17 +116,21 @@
                     <img src="images/face.jpg"/>
                 </dd>
             </dl>
+            <form action="./pwdok.html" method="post">
             <dl class="dl02">
             	<dt>
                 	<span>修改密码</span>
                 </dt>
+
                 <dd>
-                	<div class="item"><span><font>*</font>原密码：</span><input type="tex" class="txt"/></div>
-                    <div class="item"><span><font>*</font>新密码：</span><input type="tex" class="txt"/></div>
-                    <div class="item"><span><font>*</font>确认密码：</span><input type="tex" class="txt"/></div>
+                	<div class="item"><span><font>*</font>原密码：</span><input type="tex" class="txt" name="old_password"/></div>
+                    <div class="item"><span><font>*</font>新密码：</span><input type="tex" class="txt" name="new_password"/></div>
+                    <div class="item"><span><font>*</font>确认密码：</span><input type="tex" class="txt" name="confirm_password"/></div>
                     <div class="item"><input type="submit" class="sub" value="确认修改"/></div>
                 </dd>
+
             </dl>
+                </form>
         </div>
         <div class="clear"></div>
     </div>
