--- a/templates/reg.html
+++ b/templates/reg.html
@@ -1,38 +1,75 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!doctype html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>注册</title>
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>注册</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
+    <script src="js/jquery-1.5.1.js">
+    </script>
+    <script>
+        $(document).ready(function () {
+
+
+            $("#submit").click(function () {
+                user = $("#username").val()
+                pass = $("#password").val()
+                cm = $("#confirm").val()
+                if (user.length < 6 || pass.length < 6) {
+                    alert("用户名或密码长度低于6位")
+                } else if (pass !== cm) {
+                    alert("密码和确认密码不相同")
+                } else {
+
+                    $.post("./reg_now.html",
+                        {
+                            username: user,
+                            password: pass
+                        },
+                        function (data, status) {
+                            alert("请求返回值：" + data + "\n状态：" + status);
+                        });
+                }
+
+            });
+        });
+    </script>
 </head>
 <body class="member">
-
-	<div class="w1185">
-    	<div class="logo"><a href="#"></a></div>
-        <div class="font-d">欢迎登陆</div>
-        <div class="search">
-        	<form action="./reg_now.html" class="form">
-        		<input type="text" value="输入商品关键字" name="keyword" class="txt" onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}"/>
-                <input type="submit" value="搜索" class="sub"/>
-            </form>
-        	<p><a href="#">iphone6s</a>|<a href="#">面膜</a>|<a href="#">婚庆床品</a>|<a href="#">运动鞋</a>|<a href="#">眼霜</a>|<a href="#">月饼</a>|<a href="#">智能手机</a>|<a href="#">连衣裙</a></p>
-        </div>
-        <div class="s_r"><img src="images/tel.jpg"/></div>
-        <div class="clear"></div>
+<div class="w1185">
+    <div class="logo"><a href="#"></a></div>
+    <div class="font-d">欢迎登陆</div>
+    <div class="search">
+        <form action="./reg_now.html" class="form">
+            <input type="text" value="输入商品关键字" name="keyword" class="txt" onfocus="if(value=='输入商品关键字') {value=''}"
+                   onblur="if(value=='') {value='输入商品关键字'}"/>
+            <input type="submit" value="搜索" class="sub"/>
+        </form>
+        <p><a href="#">iphone6s</a>|<a href="#">面膜</a>|<a href="#">婚庆床品</a>|<a href="#">运动鞋</a>|<a href="#">眼霜</a>|<a
+                href="#">月饼</a>|<a href="#">智能手机</a>|<a href="#">连衣裙</a></p>
     </div>
+    <div class="s_r"><img src="images/tel.jpg"/></div>
+    <div class="clear"></div>
+</div>
 
 <div class="reg">
-	<div class="w1185">
-    	<div class="left">
-        	<p><b>免费注册</b></p>
+    <div class="w1185">
+        <div class="left">
+            <p><b>免费注册</b></p>
             <form action="./reg_now.html" class="form" method="post">
                 <ul>
-                     <li><span><font>*</font> 用户名/手机号：</span><input type="text" name="username" class="txt"/></li>
-                     <li><span><font>*</font> 请设置密码：</span><input type="text" name="password" class="txt"/></li>
-                     <li><span><font>*</font> 请确认密码：</span><input type="text" name="confirm" class="txt"/></li>
-                     <li class="li03"><span><font>*</font> 验证码：</span><input type="text" name="verification" class="txt txt2"/><img src="images/code.jpg"/><a href="#">看不清?换一张</a></li>
-                     <li class="li01"><input type="checkbox" value="" name=""/>我已阅并同意<a rel="#">《易易城用户注册协议》</a></li>
-                     <li class="li02"><input type="submit" value="立即注册" class="sub"/></li>
+                    <li id="ajax"></li>
+                    <li><span><font>*</font> 用户名/手机号：</span><input type="text" name="username" id="username"
+                                                                   class="txt"/></li>
+                    <li><span><font>*</font> 请设置密码：</span><input type="text" name="password" id="password" class="txt"/>
+                    </li>
+                    <li><span><font>*</font> 请确认密码：</span><input type="text" name="confirm" id="confirm" class="txt"/>
+                    </li>
+                    <li class="li03"><span><font>*</font> 验证码：</span><input type="text" id="verification"
+                                                                            name="verification"
+                                                                            class="txt txt2"/><img
+                            src="images/code.jpg"/><a href="#">看不清?换一张</a></li>
+                    <li class="li01"><input type="checkbox" value="" name=""/>我已阅并同意<a rel="#">《易易城用户注册协议》</a></li>
+                    <li class="li02"><input type="button" id="submit" value="立即注册" class="sub"/></li>
                 </ul>
             </form>
         </div>
@@ -42,9 +79,10 @@
 </div>
 
 <div class="bottom">
-	<a href="#">关于我们</a>|<a href="#">帮助中心</a>|<a href="#">法律声明</a>|<a href="#">用户协议</a>|<a href="#">联系我们</a>|<a href="#">人才招聘</a>|<a href="#">站点地图</a>
-   
-    <p>网络文化经营许可证：粤网文[2015]0295-065号<br />© 2015 深圳易易城科技网络有限公司. 粤ICP备15042543号</p>
+    <a href="#">关于我们</a>|<a href="#">帮助中心</a>|<a href="#">法律声明</a>|<a href="#">用户协议</a>|<a href="#">联系我们</a>|<a
+        href="#">人才招聘</a>|<a href="#">站点地图</a>
+
+    <p>网络文化经营许可证：粤网文[2015]0295-065号<br/>© 2015 深圳易易城科技网络有限公司. 粤ICP备15042543号</p>
 </div>
 </body>
 </html>
