--- a/templates/login.html
+++ b/templates/login.html
@@ -54,9 +54,11 @@
     <div class="w1185">
         <form action="./checks.html" class="form" method="post">
             <p class="p01"><span>会员登录</span><a href="./reg.html">免费注册</a></p>
-            <p class="p02"><input type="text" id="username" value="账户名" name="" class="txt" onfocus="if(value=='账户名') {value=''}"
+            <p class="p02"><input type="text" id="username" value="账户名" name="" class="txt"
+                                  onfocus="if(value=='账户名') {value=''}"
                                   onblur="if(value=='') {value='账户名'}"/></p>
-            <p class="p03"><input type="text" id="password" value="密码" name="" class="txt" onfocus="if(value=='密码') {value=''}"
+            <p class="p03"><input type="text" id="password" value="密码" name="" class="txt"
+                                  onfocus="if(value=='密码') {value=''}"
                                   onblur="if(value=='') {value='密码'}"/></p>
             <p class="p04"><span class="sp01"><input type="checkbox" name=""/>自动登录</span><span class="sp02">忘记密码？点击<a
                     href="#">找回密码</a></span></p>
