--- a/templates/member.html
+++ b/templates/member.html
@@ -13,7 +13,7 @@
 
 <div class="top">
 	<div class="w1200">
-		<div class="left">您好，欢迎光临易易城！<a href="./login.html">[登录]</a> <a href="./reg.html">[注册]</a></div>
+		<div class="left">您好，欢迎光临易易城！{% name %}</div>
         <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
         <div class="clear"></div>
     </div>
@@ -75,7 +75,7 @@
         	<dl><dt>账户管理</dt>
             <dd>
             	<a href="#" class="on">个人资料</a>
-                <a href="#">修改密码</a>
+                <a href="./pwd.html">修改密码</a>
                 <a href="#">绑定会员卡</a>
                 <a href="#">绑定银行卡</a>
                 <a href="#">升级管理</a>
