--- a/templates/reg.html
+++ b/templates/reg.html
@@ -26,7 +26,8 @@
                             password: pass
                         },
                         function (data, status) {
-                            if (data === "0") {
+                        alert(data)
+                            if (data == "0") {
                                 alert("账号已经存在");
                             } else {
                                 alert("注册成功");
