--- a/templates/member.html
+++ b/templates/member.html
@@ -99,7 +99,7 @@
                 <dd>
 					<table width="725" border="0" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td width="416" class="td01">尊敬的，<font>张三</font> 您好！<span>(普通会员)</span></td>
+                        <td width="416" class="td01">尊敬的，<font>{% name %}</font> 您好！<span>{% vip %}</span></td>
                         <td width="44">余额：</td>
                         <td width="122"><span>0.000元</span></td>
                         <td width="56" align="right">可用：</td>
