--- a/templates/login.html
+++ b/templates/login.html
@@ -29,16 +29,28 @@
                 } else if (!isNaN(password)){
                     verify.text("密码不能为纯数字")
                 }
-                $.post("./pwd_ok.html",
+                else{
+                    $.post("./checks.html",
                         {
-                            old_password: old_user,
-                            new_password: cm_user
+                            username: username,
+                            password: password
                         },
                         function (data, status) {
                             // alert("请求返回值：" + data + "\n状态：" + status);
-                            location.href=data 
+                            
+                            if (data =="用户名或密码错误"){
+                                verify.show();
+                                verify.text("用户名或密码错误")
+    
+                                
+                            }else{
+                                location.href="./index.html"
+                            }
+                            
                         });
                 }
+
+                
             });
         });
     </script>
@@ -75,7 +87,7 @@
                                   onblur="if(value=='') {value='密码'}"/></p>
             <p class="p04"><span class="sp01"><input type="checkbox" name=""/>自动登录</span><span class="sp02">忘记密码？点击<a
                     href="#">找回密码</a></span></p>
-            <p class="p05"><input type="submit" id="submit" value="立即登陆" class="sub"/></p>
+            <p class="p05"><input type="button" id="submit" value="立即登陆" class="sub"/></p>
             <p class="p06">使用合作网站账号登录：</p>
             <p class="p07"><a href="#" class="a01"></a><a href="#" class="a02"></a><a href="#" class="a03"></a></p>
         </form>
