--- a/templates/product_show.html
+++ b/templates/product_show.html
@@ -2,15 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>产品详情</title>
+<title>{% name %}</title>
 <link href="css/style.css" type="text/css" rel="stylesheet" />
 <script src="js/jquery-1.7.min.js" type="text/javascript"></script>
 <script src="js/common.js"  type="text/javascript"></script>
 <SCRIPT LANGUAGE="JavaScript">
-<!-- Hide
-function killErrors() {
-return true;
-}
 
 </SCRIPT>
 </head>
@@ -19,7 +15,7 @@ return true;
 
 <div class="top">
 	<div class="w1200">
-		<div class="left">您好，欢迎光临易易城！<a href="./login.html">[登录]</a> <a href="./reg.html">[注册]</a></div>
+		<div class="left">您好，欢迎光临易易城！{% name %}</div>
         <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
         <div class="clear"></div>
     </div>
