实现了搜索 动态主页和动态商品页

--- a/templates/info.html
+++ b/templates/info.html
@@ -23,9 +23,10 @@
 	<div class="w1200">
     	<div class="logo"><a href="#"></a></div>
         <div class="search">
-        	<form action="#" class="form">
-        		<input type="text" value="输入商品关键字" name="keyword" class="txt" onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}"/>
-                <input type="submit" value="搜索" class="sub"/>
+            <form action="./product.html" class="form" method="POST">
+                <input type="text" value="输入商品关键字" name="keyword" class="txt"
+                    onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}" />
+                <input type="submit" value="搜索" class="sub" />
             </form>
         	<p><a href="#">iphone6s</a>|<a href="#">面膜</a>|<a href="#">婚庆床品</a>|<a href="#">运动鞋</a>|<a href="#">眼霜</a>|<a href="#">月饼</a>|<a href="#">智能手机</a>|<a href="#">连衣裙</a></p>
         </div>
