--- a/templates/pwd.html
+++ b/templates/pwd.html
@@ -50,7 +50,7 @@
 
     <div class="top">
         <div class="w1200">
-            <div class="left">您好，欢迎光临易易城！{% name %}</div>
+                <div class="left">您好，欢迎光临京东！尊敬的 {% name %}</div>
             <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a
                     href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
             <div class="clear"></div>
@@ -61,13 +61,13 @@
         <div class="w1200">
             <div class="logo"><a href="#"></a></div>
             <div class="search">
-                <form action="#" class="form">
+                <form action="./product.html" class="form" method="POST">
                     <input type="text" value="输入商品关键字" name="keyword" class="txt"
                         onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}" />
                     <input type="submit" value="搜索" class="sub" />
                 </form>
-                <p><a href="#">iphone6s</a>|<a href="#">面膜</a>|<a href="#">婚庆床品</a>|<a href="#">运动鞋</a>|<a
-                        href="#">眼霜</a>|<a href="#">月饼</a>|<a href="#">智能手机</a>|<a href="#">连衣裙</a></p>
+                <p><a href="#">iPhone</a>|<a href="#">MacBook</a>|<a href="#">iPad</a>|<a href="#">MacPro</a>|<a
+                    href="#">MacMini</a>|<a href="#">AppWatch</a>|<a href="#">iMAC</a>|<a href="#">AirPods</a></p>
             </div>
             <div class="s_r">
                 <dl>
